--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,18 +33,30 @@ services:
     environment:
       PMA_HOST: mysql
   
+  # nginx:
+  #   container_name: presta_nginx
+  #   build: ./docker/nginx
+  #   ports:
+  #     - "8000:80"
+  #     - "443"
+  #   depends_on:
+  #     - php-fpm
+  #   volumes:
+  #     - ./sites/${APP_NAME}/app/:/var/www/html/
+  #     - ./logs/nginx/:/var/log/nginx
+  #     - ./docker/nginx/conf.d/:/etc/nginx/conf.d
+  #   restart: always
   nginx:
-    container_name: presta_nginx
-    build: ./docker/nginx
+    image: nginx
     ports:
-      - "8000:80"
-      - "443"
+        - "8000:80"
+        - "443"
     depends_on:
-      - php-fpm
+        - php-fpm
     volumes:
-      - ./sites/${APP_NAME}/app/:/var/www/html/
-      - ./logs/nginx/:/var/log/nginx
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d
+        - ./sites/${APP_NAME}/app/:/var/www/html/
+        - ./logs/nginx/:/var/log/nginx
+        - ./docker/nginx/conf.d/:/etc/nginx/conf.d
     restart: always
 
   php-fpm:
