--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,24 +33,18 @@ services:
     environment:
       PMA_HOST: mysql
   
-  # nginx:
-  #   container_name: presta_nginx
-  #   build: ./docker/nginx
-  #   ports:
-  #     - "8000:80"
-  #     - "443"
-  #   depends_on:
-  #     - php-fpm
-  #   volumes:
-  #     - ./sites/${APP_NAME}/app/:/var/www/html/
-  #     - ./logs/nginx/:/var/log/nginx
-  #     - ./docker/nginx/conf.d/:/etc/nginx/conf.d
-  #   restart: always
   nginx:
-    image: nginx
+    container_name: presta_nginx
+    build: ./docker/nginx
     ports:
-        - "8000:80"
-        - "443"
+      - "8000:80"
+      - "443"
+    depends_on:
+      - php-fpm
+    volumes:
+      - ./sites/${APP_NAME}/app/:/var/www/html/
+      - ./logs/nginx/:/var/log/nginx
+      - ./docker/nginx/conf.d/:/etc/nginx/conf.d
     restart: always
 
   php-fpm:
