--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,6 +5,9 @@ COPY ./docker_entrypoint.sh ./
 
 RUN chmod +x /tmp/wait-for-it.sh ./docker_entrypoint.sh
 
+RUN echo "LS -L"
+RUN ls -l
+
 ENTRYPOINT ["./docker-entrypoint.sh"]
 
 CMD ["nginx" "-g" "daemon off;"]
