--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,9 +1,9 @@
 FROM nginx
 
 COPY ./wait-for-it.sh /tmp/
-COPY ./docker_entrypoint.sh ./
+COPY ./docker-entrypoint.sh ./
 
-RUN chmod +x /tmp/wait-for-it.sh ./docker_entrypoint.sh
+RUN chmod +x /tmp/wait-for-it.sh ./docker-entrypoint.sh
 
 RUN echo "LS -L"
 RUN ls -l
