--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,20 +33,26 @@ services:
     environment:
       PMA_HOST: mysql
   
+  # nginx:
+  #   container_name: presta_nginx
+  #   build: ./docker/nginx
+  #   ports:
+  #     - "8000:80"
+  #     - "443"
+  #   depends_on:
+  #     - php-fpm
+  #   volumes:
+  #     - ./sites/${APP_NAME}/app/:/var/www/html/
+  #     - ./logs/nginx/:/var/log/nginx
+  #     - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+  #     - ./docker/nginx/sites/:/etc/nginx/sites-available
+  #     - ./docker/nginx/conf.d/:/etc/nginx/conf.d #OK
+  #   restart: always
   nginx:
-    container_name: presta_nginx
-    build: ./docker/nginx
+    imagene: nginx
     ports:
       - "8000:80"
       - "443"
-    depends_on:
-      - php-fpm
-    volumes:
-      - ./sites/${APP_NAME}/app/:/var/www/html/
-      - ./logs/nginx/:/var/log/nginx
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/sites/:/etc/nginx/sites-available
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d #OK
     restart: always
 
   php-fpm:
