--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,8 @@ services:
   #     - ./docker/nginx/conf.d/:/etc/nginx/conf.d #OK
   #   restart: always
   nginx:
-    imagene: nginx
+    container_name: presta_nginx
+    image: nginx
     ports:
       - "8000:80"
       - "443"
