--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,8 @@ RUN apt-get update \
 		unzip \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install iconv intl pdo_mysql mbstring soap gd zip
+    && docker-php-ext-install iconv intl pdo_mysql mbstring soap gd zip mysqli \
+	&& docker-php-ext-enable mysqli
 
 RUN docker-php-source extract \
   && if [ -d "/usr/src/php/ext/mysql" ]; then docker-php-ext-install mysqlnd; fi \
