--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -2,7 +2,8 @@
 
 server {
     # Ipv4
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
 
     # IPv6
     # listen [::]:80;
@@ -27,9 +28,9 @@ server {
     server_name localhost;
 
     # [REQUIRED EDIT] Absolute path to your website root on the filesystem
-    root /path/to/prestashop;
+    root /var/www/html;
 
-    index index.php;
+    index index.php index.html index.htm;
 
     # Redirect 404 errors to prestashop
     error_page 404 /index.php?controller=404;
