--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -197,9 +197,13 @@ server {
         fastcgi_send_timeout 30s;
 
         # In case of long loading or 502 / 504 errors
-        # fastcgi_buffer_size 256k;
-        # fastcgi_buffers 256 16k;
+        fastcgi_buffer_size 256k;
+        fastcgi_buffers 256 16k;
         # fastcgi_busy_buffers_size 256k;
         client_max_body_size 10M;
     }
+
+    # location / {
+    #      try_files $uri $uri/ /index.php$is_args$args;
+    # }
 }
