--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -190,7 +190,7 @@ server {
 
         # [REQUIRED EDIT] Connection to PHP-FPM - choose one
         # fastcgi_pass 127.0.0.1:9000;
-        fastcgi_pass unix:/run/php/php7.1-fpm.sock;
+        fastcgi_pass php-upstream;
 
         fastcgi_keep_conn on;
         fastcgi_read_timeout 30s;
@@ -203,7 +203,8 @@ server {
         client_max_body_size 10M;
     }
 
-    # location / {
-    #      try_files $uri $uri/ /index.php$is_args$args;
-    # }
+    location / {
+         try_files $uri $uri/ /index.php$is_args$args;
+    }
+
 }
