--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -8,6 +8,6 @@ RUN chmod +x /tmp/wait-for-it.sh ./docker-entrypoint.sh
 RUN echo "LS -L"
 RUN ls -l
 
-#ENTRYPOINT ["./docker-entrypoint.sh"]
+ENTRYPOINT ["./docker-entrypoint.sh"]
 
 CMD nginx
