--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,6 +1,7 @@
 # docker/nginx/nginx.conf
 user  nginx;
 worker_processes  4;
+daemon off;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
