--- a/.env
+++ b/.env
@@ -3,17 +3,17 @@ MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_USER=username
 MYSQL_PASSWORD=password
 MYSQL_DATABASE=prestashop
-MYSQL_SERVER=mysql
+MYSQL_SERVER=db
 USER_ID=1000
 
 # pour docker_entrypoint.sh app
-DB_HOST=mysql
+DB_HOST=db
 DB_PORT=3306
 APP_HOST=php-fpm
 APP_PORT=9000
 
 # Prestashop
-PS_DB_SERVER=mysql
+PS_DB_SERVER=db
 PS_DOMAIN=209.97.178.32:8000
 PS_ADMIN_EMAIL=email@email.com
 PS_ADMIN_PASSWORD=123456
