--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -37,6 +37,8 @@ COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
+RUN echo "BONSOIR"
+RUN echo $RUN_INSTALL
 CMD /tmp/run_install_prestashop.sh $RUN_INSTALL
 # Define working directory.
 WORKDIR /var/www/html
