--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -39,6 +39,7 @@ RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_pres
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
 RUN echo "BONSOIR"
 RUN echo $RUN_INSTALL
+ARG RUN_INSTALL
 CMD /tmp/run_install_prestashop.sh $RUN_INSTALL
 # Define working directory.
 WORKDIR /var/www/html
