--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -41,7 +41,8 @@ RUN echo "BONSOIR"
 ARG RUN_INSTALL
 RUN echo $RUN_INSTALL
 
-CMD /tmp/run_install_prestashop.sh $RUN_INSTALL
+CMD ["sh", "-c", "/tmp/run_install_prestashop.sh $RUN_INSTALL"]
+
 # Define working directory.
 WORKDIR /var/www/html
 # Define default command.
