--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -31,16 +31,17 @@ COPY ./phppsinfo.php /tmp/
 COPY ./php.ini /usr/local/etc/php/
 
 RUN if [ -x "$(command -v apache2-foreground)" ]; then a2enmod rewrite; fi
-#COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
+RUN echo "BONSOIR"
+RUN echo ${APP_LOCATION}
+RUN echo ${RUN_INSTALL}
 COPY --chown=www-data:www-data ${APP_LOCATION}/ /var/www/html/
 
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
 ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
-RUN echo "BONSOIR"
+
 ARG RUN_INSTALL
 ENV RUN_INSTALL ${RUN_INSTALL}
-RUN echo $RUN_INSTALL
 
 CMD ["sh", "-c", "/tmp/run_install_prestashop.sh ${RUN_INSTALL}"]
 
