--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3"
 
 services:
   db:
-    build: ./docker/database
+    build: ./database
     restart: unless-stopped # restart le container si stoppé lors d'une erreur
     env_file:
       - .env
     volumes:
       #- ./db_data/db/backup.sql:/docker-entrypoint-initdb.d/backup.sql #it loads an already existing database
-      - ./sites/${APP_NAME}/data/mysql/:/var/lib/mysql # mapping de la db
-      - ./sites/${APP_NAME}/logs/mysql/:/var/log/mysql # mapping des logs de la db
+      - ../sites/${APP_NAME}/data/mysql/:/var/lib/mysql # mapping de la db
+      - ../sites/${APP_NAME}/logs/mysql/:/var/log/mysql # mapping des logs de la db
     entrypoint: "" # On écrase l'entrypoint de l'image mysql : ENTRYPOINT ["docker-entrypoint.sh"]
     command: >
       bash -c "chown -R mysql:mysql /var/log/mysql 
@@ -30,18 +30,18 @@ services:
       PMA_HOST: db
   
   nginx:
-    build: ./docker/nginx
+    build: ./nginx
     ports:
       - "8000:80"
       - "443"
     depends_on:
       - php-fpm
     volumes:
-      - ./sites/${APP_NAME}/app/:/var/www/html/
-      - ./logs/nginx/:/var/log/nginx
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/sites/:/etc/nginx/sites-available
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d #OK
+      - ../sites/${APP_NAME}/app/:/var/www/html/
+      - ../sites/${APP_NAME}/logs/nginx/:/var/log/nginx
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/sites/:/etc/nginx/sites-available
+      - ./nginx/conf.d/:/etc/nginx/conf.d #OK
     restart: always
     env_file:
       - .env
@@ -49,7 +49,7 @@ services:
   php-fpm:
     container_name: presta_${APP_NAME}_app
     build: 
-      context: ./docker/php-fpm
+      context: ./php-fpm
       dockerfile: Dockerfile
       args:
         APP_NAME: ${APP_NAME}
@@ -57,7 +57,7 @@ services:
     image: presta/${APP_NAME}_app:latest
     #command: ["/tmp/wait-for-it.sh", "--timeout=60", "--strict", "mysql:3306", "--", "/tmp/run_install_prestashop.sh", "${RUN_INSTALL}", "${APP_NAME}"]
     volumes:
-      - ./sites/${APP_NAME}/app/:/var/www/html
+      - ../sites/${APP_NAME}/app/:/var/www/html
       #- ~/.ssh/id_rsa:/root/.ssh/id_rsa
     expose:
       - 9000
