--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -34,6 +34,8 @@ RUN if [ -x "$(command -v apache2-foreground)" ]; then a2enmod rewrite; fi
 RUN echo "BONSOIR"
 RUN echo ${APP_NAME}
 RUN echo ${RUN_INSTALL}
+RUN echo ${APP_NAME}
+RUN echo ${RUN_INSTALL}
 
 RUN chmod +x /tmp/wait-for-it.sh /tmp/docker_entrypoint.sh /tmp/run_install_prestashop.sh
 
