--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -70,6 +70,8 @@ services:
       - db
     env_file:
       - .env
+    # command: >
+    #   sh -c "/tmp/run_install_prestashop.sh ${RUN_INSTALL}"
     networks: 
       - frontend
       - backend
