--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -39,7 +39,7 @@ ENTRYPOINT ["/tmp/docker_entrypoint.sh"]
 ARG RUN_INSTALL
 ENV RUN_INSTALL ${RUN_INSTALL}
 
-CMD ["php-fpm"]
+CMD ["sh", "-c", "/tmp/run_install_prestashop.sh ${RUN_INSTALL}"]
 
 # Define working directory.
 WORKDIR /var/www/html
