--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -12,11 +12,11 @@ RUN apt-get update \
 		default-mysql-client \
 		wget \
 		unzip \
+		git \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install iconv intl pdo_mysql mbstring soap gd zip mysqli \
 	&& docker-php-ext-enable mysqli \
-	&& git
 
 RUN docker-php-source extract \
   && if [ -d "/usr/src/php/ext/mysql" ]; then docker-php-ext-install mysqlnd; fi \
