--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -13,6 +13,8 @@ RUN apt-get update \
 		wget \
 		unzip \
 		git \
+		&& pecl install mcrypt-1.0.4 \
+    && docker-php-ext-enable mcrypt \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install iconv intl pdo_mysql mbstring soap gd zip mysqli \
